# OpenSTX

./: .gitignore  CMakeLists.txt  README.md  make.sh  run_stx.sh  stop_stx.sh
conf/: alicloud_db.ini
data/: example_realtime.json
documents/: DailyTradingSystemV0_1.md  README_DAEMON.md  README_IB_TWS.md  README_LIBPQXX.md  RECORD_240822_CN.md  TopLevelDesign.md  gpt_prompt.md
include/: Config.h  Config.hpp  DailyDataFetcher.h  DailyDataFetcher.hpp  HistoricalDataFetcher.h  IBClient.h  Logger.h  Logger.hpp  MacroDataFetcher.h  RealTimeData.h  RealTimeData.hpp  TimescaleDB.h  TimescaleDB.hpp
py_script/: requirements.txt
py_script/daily_trading/: backtesting.py  combined_strategy.py  consecutive_learning.py  daily_trading.py  data_fetching.py  data_loader.py  db_config.py  main.py  model_training.py  realtime_trading.py  resk_management.py  unit_test.py
py_script/daily_trading/config/: db_config.py
py_script/daily_trading/data/: data_fetching.py  data_loader.py  data_preprocessing.py
py_script/daily_trading/models/: model_training.py
py_script/daily_trading/strategies/: combined_strategy.py
py_script/daily_trading/stratiges/: combined_strategy.py  risk_management.py
py_script/daily_trading/trading/: backtesting.py  consecutive_learning.py  realtime_trading.py  trading_execution.py
py_script/test/: verigy_l2_subscripthon.py
py_script/visualization/: visualizeRealtime.py
src/: main.cpp
src/data/: DailyDataFetcher.cpp  HistoricalDataFetcher.cpp  IBClient.cpp  MacroDataFetcher.cpp  RealTimeData.cpp  read_shared_memory.py
src/database/: TimescaleDB.cpp
src/logger/: Logger.cpp
src/visualization/: visualizeRealtime.py  visualize_realtime.py
test/: CMakeLists.txt  main.cpp
test/stx_test/: CMakeLists.txt  RealTimeDataTester  RealTimeDataTester.cpp  RealTimeDataTester.hpp  TestIBConnect.cpp  TestTimescaleDB.cpp  libib_tws.dylib
test/unit_test/: CMakeLists.txt  TEST_TimescaleDB.h  TEST_TimescaleDB.hpp  main.cpp
third_parts/IntelRDFPMathLib20U2/: make.sh
third_parts/ib_tws/: CMakeLists.txt  make.sh
third_parts/ib_tws/include/: EWrapper.h
third_parts/libpqxx/: CMakeLists.txt  README.md  make.sh
tv_scripts/: Indocator.sh  Strategy.sh
